working on tooltip

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2070,61 +2070,61 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_cult_of_ittihat_ve_terakki_desc:0 "İttihat ve Terakki Fırkası has established itself as a large party with wide reaching members. Though not all of it's members hold posts in the government, the unofficially retain power and influence the empire. The views and actions of certain individuals within the party shape the actions, thus the future of the empire."
  TUR_utilize_ismail_enver:0 "Utilize [ROOT.TUR_ismail_enver.GetName]"
  TUR_utilize_ismail_enver_desc:0 "Though not an official part of the government, [ROOT.TUR_ismail_enver.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_ismail_enver_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_ismail_enver_tt:0 "Modify §YCommittee of Union and Progress§! by\n£army_morale_texticon  Division Recovery Rate: §G+5.0%§!\n£war_support_modifiericons_texticon  War Support: §G+5.00%§!\n£command_power_texticon  Daily Command Power Gain Multiplier: §G+5%§!\n\n"
  TUR_dismiss_ismail_enver:0 "Dismiss [ROOT.TUR_ismail_enver.GetName]"
  TUR_dismiss_ismail_enver_desc:0 "[ROOT.TUR_ismail_enver.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_ismail_enver_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
- TUR_utilize_ali_ihsan_iloglu:0 "Utilize [ROOT.TUR_ali_ihsan_iloglu.GetName]"
- TUR_utilize_ali_ihsan_iloglu_desc:0 "Though not an official part of the government, [ROOT.TUR_ali_ihsan_iloglu.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_ali_ihsan_iloglu_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
- TUR_dismiss_ali_ihsan_iloglu:0 "Dismiss [ROOT.TUR_ali_ihsan_iloglu.GetName]"
- TUR_dismiss_ali_ihsan_iloglu_desc:0 "[ROOT.TUR_ali_ihsan_iloglu.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
- TUR_dismiss_ali_ihsan_iloglu_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
  TUR_utilize_ahmet_kemal:0 "Utilize [ROOT.TUR_ahmet_kemal.GetName]"
  TUR_utilize_ahmet_kemal_desc:0 "Though not an official part of the government, [ROOT.TUR_ahmet_kemal.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_ahmet_kemal_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_ahmet_kemal_tt:0 "Modify §YCommittee of Union and Progress§! by\n£stability_defensive_texticon  Defensive War Penalty Stability Modifier: §G+7.00%§!\n£infantry_equipment_texticon  Equipment Capture Ratio Modifier: §G+15.0%§!\n£supply_consumption_core_texticon  Supply Combat Penalties on Core Territory: §G-15.0%§!\n\n"
  TUR_dismiss_ahmet_kemal:0 "Dismiss [ROOT.TUR_ahmet_kemal.GetName]"
  TUR_dismiss_ahmet_kemal_desc:0 "[ROOT.TUR_ahmet_kemal.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_ahmet_kemal_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_ali_ihsan_iloglu:0 "Utilize [ROOT.TUR_ali_ihsan_iloglu.GetName]"
+ TUR_utilize_ali_ihsan_iloglu_desc:0 "Though not an official part of the government, [ROOT.TUR_ali_ihsan_iloglu.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
+ TUR_utilize_ali_ihsan_iloglu_tt:0 "Modify §YCommittee of Union and Progress§! by\n£factory_output_texticon  Factory Output: §G+5.00%§!\n£dockyard_output_texticon  Dockyard Output: §G+5.00%§!\n£ai_acceptance_texticon  Acceptance of Socialist Diplomacy: §G+10§!\n\n"
+ TUR_dismiss_ali_ihsan_iloglu:0 "Dismiss [ROOT.TUR_ali_ihsan_iloglu.GetName]"
+ TUR_dismiss_ali_ihsan_iloglu_desc:0 "[ROOT.TUR_ali_ihsan_iloglu.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
+ TUR_dismiss_ali_ihsan_iloglu_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
  TUR_utilize_kara_vasif:0 "Utilize [ROOT.TUR_kara_vasif.GetName]"
  TUR_utilize_kara_vasif_desc:0 "Though not an official part of the government, [ROOT.TUR_kara_vasif.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_kara_vasif_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_kara_vasif_tt:0 "Modify §YCommittee of Union and Progress§! by\n£political_violence_texticon  Resistance Target in our states occupied by the enemy: §G+10%§!\n£political_violence_damage_texticon  Damage to Enemy Garrisons in our states occupied by the enemy: §G+30.00%§!\n£time_texticon  Agency upgrade time: §G-10.0%§!\n\n"
  TUR_dismiss_kara_vasif:0 "Dismiss [ROOT.TUR_kara_vasif.GetName]"
  TUR_dismiss_kara_vasif_desc:0 "[ROOT.TUR_kara_vasif.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_kara_vasif_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
  TUR_utilize_mithat_sukru_bleda:0 "Utilize [ROOT.TUR_mithat_sukru_bleda.GetName]"
  TUR_utilize_mithat_sukru_bleda_desc:0 "Though not an official part of the government, [ROOT.TUR_mithat_sukru_bleda.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_mithat_sukru_bleda_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_mithat_sukru_bleda_tt:0 "Modify §YCommittee of Union and Progress§! by\n£political_power_texticon  Daily Political Power Gain: §G+0.05%§!\n£political_violence_texticon  Foreign subversive activities efficiency: §G-25%§!\n£political_power_texticon  Subversive activities cost: §G-25%§!\n£drift_defence_texticon  Ideology drift defense: §G+15.0%§!\n\n"
  TUR_dismiss_mithat_sukru_bleda:0 "Dismiss [ROOT.TUR_mithat_sukru_bleda.GetName]"
  TUR_dismiss_mithat_sukru_bleda_desc:0 "[ROOT.TUR_mithat_sukru_bleda.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_mithat_sukru_bleda_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
  TUR_utilize_huseyin_cahit_yalcin:0 "Utilize [ROOT.TUR_huseyin_cahit_yalcin.GetName]"
  TUR_utilize_huseyin_cahit_yalcin_desc:0 "Though not an official part of the government, [ROOT.TUR_huseyin_cahit_yalcin.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_huseyin_cahit_yalcin_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_huseyin_cahit_yalcin_tt:0 "Modify §YCommittee of Union and Progress§! by\n£stability_texticon  Stability: §G+5.00%§!\n£war_support_modifiericons_texticon  War Support: §G+5.00%§!\n£boost_popularity_texticon  Daily Proto-Fascism Support: §G+0.05§!\n\n"
  TUR_dismiss_huseyin_cahit_yalcin:0 "Dismiss [ROOT.TUR_huseyin_cahit_yalcin.GetName]"
  TUR_dismiss_huseyin_cahit_yalcin_desc:0 "[ROOT.TUR_huseyin_cahit_yalcin.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_huseyin_cahit_yalcin_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
  TUR_utilize_fethi_okyar:0 "Utilize [ROOT.TUR_fethi_okyar.GetName]"
  TUR_utilize_fethi_okyar_desc:0 "Though not an official part of the government, [ROOT.TUR_fethi_okyar.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_fethi_okyar_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_fethi_okyar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-15.0%§!\n£stability_texticon  Stability: §G+5.00%§!\n£ai_acceptance_texticon  Acceptance of Democratic Diplomacy: §G+10§!\n\n"
  TUR_dismiss_fethi_okyar:0 "Dismiss [ROOT.TUR_fethi_okyar.GetName]"
  TUR_dismiss_fethi_okyar_desc:0 "[ROOT.TUR_fethi_okyar.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_fethi_okyar_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
  TUR_utilize_mehmed_talat:0 "Utilize [ROOT.TUR_mehmed_talat.GetName]"
  TUR_utilize_mehmed_talat_desc:0 "Though not an official part of the government, [ROOT.TUR_mehmed_talat.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_mehmed_talat_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_mehmed_talat_tt:0 "Modify §YCommittee of Union and Progress§! by\n£political_power_texticon  Daily Political Power Gain: §G+0.05%§!\n£political_violence_texticon  Foreign subversive activities efficiency: §G-15%§!\n£political_power_texticon  Subversive activities cost: §G-15%§!\n£drift_defence_texticon  Ideology drift defense: §G+10.0%§!\n\n"
  TUR_dismiss_mehmed_talat:0 "Dismiss [ROOT.TUR_mehmed_talat.GetName]"
  TUR_dismiss_mehmed_talat_desc:0 "[ROOT.TUR_mehmed_talat.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_mehmed_talat_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
  TUR_utilize_mustafa_kemal:0 "Utilize [ROOT.TUR_mustafa_kemal.GetName]"
  TUR_utilize_mustafa_kemal_desc:0 "Though not an official part of the government, [ROOT.TUR_mustafa_kemal.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_mustafa_kemal_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_mustafa_kemal_tt:0 "Modify §YCommittee of Union and Progress§! by\n£political_power_texticon  Daily Political Power Gain: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+5.00%§!\n£research_speed_texticon  Research Speed: §G+3.00%§!\n\n"
  TUR_dismiss_mustafa_kemal:0 "Dismiss [ROOT.TUR_mustafa_kemal.GetName]"
  TUR_dismiss_mustafa_kemal_desc:0 "[ROOT.TUR_mustafa_kemal.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_mustafa_kemal_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
  TUR_utilize_ahmed_cemal:0 "Utilize [ROOT.TUR_ahmed_cemal.GetName]"
  TUR_utilize_ahmed_cemal_desc:0 "Though not an official part of the government, [ROOT.TUR_ahmed_cemal.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
- TUR_utilize_ahmed_cemal_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
+ TUR_utilize_ahmed_cemal_tt:0 "Modify §YCommittee of Union and Progress§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+15%§!\n£political_violence_texticon  Garrison Penetration Chance: §G-5.00%§!\n£political_violence_damage_texticon  Damage to Garrisons: §G-25.00%§!\n\n"
  TUR_dismiss_ahmed_cemal:0 "Dismiss [ROOT.TUR_ahmed_cemal.GetName]"
  TUR_dismiss_ahmed_cemal_desc:0 "[ROOT.TUR_ahmed_cemal.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_ahmed_cemal_tt:0 "Modify §YCommittee of Union and Progress§! by\n"
