--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -459,3 +459,4 @@
  TUR_brutal_paramilitary_officer:0 "Brutal Paramilitary Officer"
  TUR_head_of_the_turkish_hearts:0 "Head of the Turkish Hearts"
  TUR_head_of_the_police_force:0 "Head of the Police Force"
+ TUR_liberal_editor:0 "Liberal Editor"
