Electrical Advisory Councils

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -19,7 +19,11 @@ GER_rapid_urbanisation:0 "Rapid Urbanisation"
 GER_rapid_urbanisation_desc:0 ""
 GER_rapid_urbanisation_2:0 "Rapid Urbanisation"
 GER_rapid_urbanisation_2_desc:0 ""
+GER_rapid_urbanisation_3:0 "Rapid Urbanisation"
+GER_rapid_urbanisation_3_desc:0 ""
 GER_encouraged_german_militarism:0 "Encouraged German Militarism"
+GER_expanding_workforce:0 "Expanding Workforce"
+GER_expanding_workforce_desc:0 ""
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
@@ -103,6 +107,9 @@ GER_economic_actions:0 "Economic Actions"
 GER_finance_berlin_military_complex:0 "Finance Berlin's Military Complex"
 GER_finance_rhine_military_complex:0 "Finance the Rhine's Military Complex"
 GER_finance_saarland_military_complex:0 "Finance the Saarland's Military Complex"
+GER_subsidise_toy_makers_in_the_Rhine:0 "Subsidise Toy Makers in the Rhine"
+GER_funding_shipyards_in_bremen:0 "Funding New Shipyards in Bremen"
+GER_expand_local_administration_centres:0 "Expand Local Administration Centres"
 
 #Flags
 GER_ww1_state_munitions:0 "Investing in State Munitions"
