sixtus affair fixes

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -589,7 +589,7 @@
  AUH_czernin_suicide:0 "§YOttokar Czernin§! die"
 
 
- ww1_auh.203.t:0 "[AUH.getName] Abdicates"
+ ww1_auh.203.t:0 "[AUH.getLeader] Abdicates"
  ww1_auh.203.d:0 "Following significant political pressure, the Austro-Hungarian Emperor [AUH.getLeader] was forced to abdicate in favor of Eugene of Austria-Teschen, a much more stable figure in the Austro-Hungarian political landscape. This sudden change of situation is consequent to the Sixtus affair, revealing that [AUH.getLeader] was secretly seeking to make peace with France and the rest of the Entente. The affair having caused a scandal, the emperor had to surrender his crown.\n\nThis exceptional event once again brings the dual monarchy closer to its German brother, once again threatening to make it nothing more than a client state."
  ww1_auh.203.a:0 "At least [AUH.getLeader] tried..."
  ww1_auh.203.b:0 "He was a fool"
@@ -619,6 +619,9 @@
  ww1_auh.209.a:0 "The war will be over soon"
  ww1_auh.209.b:0 "WHAT ?!"
 
+ ww1_auh.210.t:0 "Austria Refuses to Deal with Italy"
+ ww1_auh.210.d:0 "Austria outlined its negotiating conditions, immediately mentioning the impossibility of making any concessions to Italy. Unfortunately for them, cooperation with the Italian authorities is an absolute prerequisite for any form of peace. As a result, we will not be able to negotiate with [AUH.getLeader]."
+ ww1_auh.210.a:0 "Too bad!"
 
  ww1_auh.17.t:0 "Karl I abdicates the throne"
  ww1_auh.17.d:0 "Karl I has announced the abdication of his Austrian and Hungarian thrones. This is the final nail in the coffin for the Habsburg Empire, now completely dead and buried as a result of the Great War. With the monarchy gone for good, the Austrian parliament in Vienna has taken the initiative and established the Republic of German-Austria, a rump state that is all that's left of the carcass of the Austro-Hungarian Empire. The Republic of German-Austria seeks to unite with Germany, but this is likely impossible due to the Entente's involvement. Habsburg rule is a thing of the past, and marks the end of an era."
