german reaction in private

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -623,6 +623,10 @@
  ww1_auh.210.d:0 "Austria outlined its negotiating conditions, immediately mentioning the impossibility of making any concessions to Italy. Unfortunately for them, cooperation with the Italian authorities is an absolute prerequisite for any form of peace. As a result, we will not be able to negotiate with [AUH.getLeader]."
  ww1_auh.210.a:0 "Too bad!"
 
+ ww1_auh.211.t:0 "Austrian Betrayal"
+ ww1_auh.211.d:0 "While we were making historic advances on the front, Austria publicly announced its withdrawal from the conflict, acceding to all of our adversaries' demands. We thus discover that [AUH.getLeader] negotiated for several months in secret behind our backs, without telling us anything! The German population is disconcerted and demoralized by the loss of our main ally. From now on, our adversaries will redirect their efforts on us. How to achieve victory now?!"
+ ww1_auh.211.a:0 "[AUH.getLeader] !!!!!!!!!"
+
  ww1_auh.17.t:0 "Karl I abdicates the throne"
  ww1_auh.17.d:0 "Karl I has announced the abdication of his Austrian and Hungarian thrones. This is the final nail in the coffin for the Habsburg Empire, now completely dead and buried as a result of the Great War. With the monarchy gone for good, the Austrian parliament in Vienna has taken the initiative and established the Republic of German-Austria, a rump state that is all that's left of the carcass of the Austro-Hungarian Empire. The Republic of German-Austria seeks to unite with Germany, but this is likely impossible due to the Entente's involvement. Habsburg rule is a thing of the past, and marks the end of an era."
  ww1_auh.17.a:0 "Der Krieg ist verloren."
