--- a/localisation/english/ww1_game_rules_l_english.yml
+++ b/localisation/english/ww1_game_rules_l_english.yml
@@ -126,7 +126,7 @@ RULE_OPTION_STATEMATE_DESC:0 "Bulgaria will peace out with honor, losing some te
  RULE_OPTION_FAVOR_AUSTRIA_DESC:0 "Neighboring countries will all make decisions favoring Austria"
  RULE_OPTION_NO_INTERVENTION:0 "No Interventions"
  RULE_OPTION_NO_INTERVENTION_DESC:0 "Neighboring countries will stay neutral"
- sixtus_affair:0 "Sixtus Affair Outcome"
+ sixtus_affair:0 "@AUH @FRA Sixtus Affair Outcome"
  SIXTUS_AFFAIR:0 "Sixtus Affair (Historical)"
  AUSTRIA_SECURE_PEACE:0 "Austria Secure Peace"
  AUSTRIA_SECURE_PEACE_DESC:0 "Austria will conduct secret negotiations with France and attempt to conclude a separate peace with the Entente."
