actual army ranks

--- a/localisation/english/ww1_unit_medals_l_english.yml
+++ b/localisation/english/ww1_unit_medals_l_english.yml
@@ -24,6 +24,9 @@
  KOR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Bujang"
 
 CHL_medal_of_the_century:0 "Medal Of The Century"
-CHL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Coronel"
-
+ CHL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Teniente"
+ CHL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Capitan"
+ CHL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Mayor"
+ CHL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Teniente Coronel"
+ CHL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Coronel"
 
