--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1886,7 +1886,7 @@ CHL_nationalize_coal:0 "Nationalize Coal"
 CHL_nationalize_coal_desc:0 ""
 CHL_portsofsanantionio_and_talcahuano:0 "Ports Of San Antonio And Talcahuano  "
 CHL_portsofsanantionio_and_talcahuano_desc:0 ""
-CHL_promotelaissezfaire:0 "Promote Laissez Faire"
+CHL_promotelaissezfaire:0 "Tributary Reform"
 CHL_promotelaissezfaire_desc:0 ""
 CHL_waterlaws:0 "Water Laws"
 CHL_waterlaws_desc:0 ""
