--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1007,6 +1007,8 @@
  STATE_1005:0 "Jingbin Railway"
  STATE_1006:0 "Città di Zara"
  STATE_1007:0 "North Bukovina"
+ STATE_1008:0 "Travancore"
+ STATE_1009:0 "Berar"
 
  YODONG_STATE:0 "Yodong"
  SEOGANDO_STATE:0 "Seogando"
