--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -311,7 +311,8 @@
  VICTORY_POINTS_12080:0 "Indore"
  VICTORY_POINTS_4132:0 "Bhavnagar"
  VICTORY_POINTS_7150:0 "Surat"
- VICTORY_POINTS_10030:0 "Nagpur"
+ VICTORY_POINTS_4883:0 "Nagpur"
+ VICTORY_POINTS_10030:0 "Ellichpur"
  VICTORY_POINTS_10401:0 "Raipur"
  VICTORY_POINTS_10001:0 "Visakhapatnam"
  VICTORY_POINTS_10060:0 "Sambalpur"
