desc for balance of power

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2217,10 +2217,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_dismiss_hamdullah_suphi_tanriover_desc:0 "[ROOT.TUR_hamdullah_suphi_tanriover.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_hamdullah_suphi_tanriover_tt:0 "Modify §YCommittee of Union and Progress§! by\n£population_texticon  Monthly Population: §R-2.5%§!\n£stability_texticon  Stability: §R-2.50%§!\n£research_speed_texticon  Research Speed: §R-1.50%§!\n\n"
  TUR_utilize_halide_edib_adivar:0 "Utilize [ROOT.TUR_halide_edib_adivar.GetName]"
- TUR_utilize_halide_edib_adivar_desc:0 "Though not an official part of the government, [ROOT.TUR_halide_edib_adivar.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
+ TUR_utilize_halide_edib_adivar_desc:0 "Though not an official part of the government, [ROOT.TUR_halide_edib_adivar.GetName] is an influential member of the committee. Her opinions shall influence the actions taken by the state."
  TUR_utilize_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population: §Y1.00%§!\n£stability_texticon  Stability: §R-5.00%§!\n£war_support_modifiericons_texticon  War Support: §G+2.50%§!\n\n"
  TUR_dismiss_halide_edib_adivar:0 "Dismiss [ROOT.TUR_halide_edib_adivar.GetName]"
- TUR_dismiss_halide_edib_adivar_desc:0 "[ROOT.TUR_halide_edib_adivar.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
+ TUR_dismiss_halide_edib_adivar_desc:0 "[ROOT.TUR_halide_edib_adivar.GetName] has overstayed her welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population: §Y-1.00%§!\n£stability_texticon  Stability: §G+5.00%§!\n£war_support_modifiericons_texticon  War Support: §R-2.50%§!\n\n"
  TUR_utilize_cavid_bey:0 "Utilize [ROOT.TUR_cavid_bey.GetName]"
  TUR_utilize_cavid_bey_desc:0 "Though not an official part of the government, [ROOT.TUR_cavid_bey.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
@@ -2554,6 +2554,34 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_stability_1:0 "£stability_texticon  Stability: §G+0.10%§!\n"
  TUR_minority_war_support_down:0 "£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
  TUR_minority_stability_up_1:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
+
+ TUR_sway_the_army:0 "Sway the Army"
+ TUR_sway_the_army_desc:0 "Army has always held an important position in the Ottoman society. Especially after the 31 March Incident, importance of army became more and more entrenched. Importance of the army even tips off the balance in the struggle for control over the regime."
+ TUR_sway_the_navy:0 "Sway the Navy"
+ TUR_sway_the_navy_desc:0 "Though not as much as the army itself, navy also holds a special position. Using the power of the navy, we can strengthen our desired position in the struggle for control."
+ TUR_sway_the_airforce:0 "Sway the Airforce"
+ TUR_sway_the_airforce_desc:0 "Though formed recently, airforce enjoys relative popularity. Pulling the airforce on our side could shift the balance of power on our way."
+ TUR_sway_the_administration:0 "Sway the Administration"
+ TUR_sway_the_administration_desc:0 "The political and civilian faction of İttihat ve Terakki has always struggled against the popular military faction. As the civilian faction is the one that's defacto on control, it can easily outpaste the control of any armed forced branch."
+ TUR_feed_the_army:0 "Feed the Army"
+ TUR_feed_the_army_desc:0 "Our resources are limited. Feeding both our population and a standing army is not possible. We'll have to sacrifice our starving population in favor of feeding a large standing army."
+ TUR_feed_the_people:0 "Feed the People"
+ TUR_feed_the_people_desc:0 "Our resources are limited. Feeding both our population and a standing army is not possible. We'll have to sacrifice our current large standing army in favor of feeding our population."
+ TUR_expand_conscription:0 "Expand Conscription"
+ TUR_expand_conscription_desc:0 "Army has long been pushing for increased conscription to expand its power. By expanding conscription, newly recruited soldiers and young officers will support our struggle for control."
+ TUR_utilize_farming_population:0 "Utilize Farming Population"
+ TUR_utilize_farming_population_desc:0 "We need our manpower on the fields busy with agriculture rather than sitting in the army. By opposing army's plan to increase conscription, we'll solidify our control by diverting the workforce towards agriculture."
+ TUR_undermine_enver:0 "Undermine Enver"
+ TUR_undermine_enver_desc:0 "[ROOT.TUR_ismail_enver.GetName] has been securing his power in the military. Yet his incompetence led to many miscalculations and defeats. We can undermine his command and act on our autonomous will to reduce his power."
+ TUR_army_in_administration:0 "Army in Administration"
+ TUR_army_in_administration_desc:0 "Civilian government headed by Talat has been insufficient in fulfilling the needs of the army. Through taking control of some sectors for a temporary time, we can ensure army dominance in administration."
+ TUR_army_subservient_to_government:0 "Army Subservient to Government"
+ TUR_army_subservient_to_government_desc:0 "Army has been going out of its way and meddling with the administrative decisions of the government. In order to prevent inexperienced militarist officers from taking over the nation, we have to remind the army of its place."
+ TUR_gather_moderate_opposition:0 "Gather Moderate Opposition"
+ TUR_gather_moderate_opposition_desc:0 "Both ultra-militaristic faction of Enver and pan-Turanist faction of Talat have been driving the empire to its downfall. Gathered by those who're unsatisfied with both sides, we'll form a united opposition to prevent both factions from becoming too powerful."
+ TUR_black_sea_raid_mission:0 "Black Sea Raid"
+ TUR_black_sea_raid_mission_desc:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
+ RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
@@ -2921,19 +2949,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_revanchist_foreign_relations:0 "Revanchist Foreign Relations"
  TUR_oil_sales:0 "Oil Sales"
  TUR_secularism:0 "Secularism"
- TUR_sway_the_army:0 "Sway the Army"
- TUR_sway_the_administration:0 "Sway the Administration"
- TUR_feed_the_army:0 "Feed the Army"
- TUR_feed_the_people:0 "Feed the People"
- TUR_shift_to_arms_industry:0 "Shift to Arms Industry"
- TUR_focus_on_civilian_industry:0 "Focus on Civilian Industry"
- TUR_expand_conscription:0 "Expand Conscription"
- TUR_return_to_workforce:0 "Return to Workforce"
- TUR_army_in_administration:0 "Army in Administration"
- TUR_army_subservient_to_government:0 "Army Subservient to Government"
- TUR_black_sea_raid_mission:0 "Black Sea Raid"
- TUR_black_sea_raid_mission_sea:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
- RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
  TUR_independence_war_against_russia:0 "Ottoman War of Independence"
  RUS_independence_war_against_russia:0 "Ottoman War of Independence"
  TUR_switch_to_the_german_side:0 "Switch to the German Side"
