--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2566,7 +2566,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_feed_the_army:0 "Feed the Army"
  TUR_feed_the_army_desc:0 "Our resources are limited. Feeding both our population and a standing army is not possible. We'll have to sacrifice our starving population in favor of feeding a large standing army."
  TUR_feed_the_people:0 "Feed the People"
- TUR_feed_the_people_desc:0 "Our resources are limited. Feeding both our population and a standing army is not possible. We'll have to sacrifice our current large standing army in favor of feeding our population."
+ TUR_feed_the_people_desc:0 "Our resources are limited. Feeding both our population and a standing army is not possible. We'll have to prioritize feeding our own population instead of maintaining a large army that's just sitting in its place."
  TUR_expand_conscription:0 "Expand Conscription"
  TUR_expand_conscription_desc:0 "Army has long been pushing for increased conscription to expand its power. By expanding conscription, newly recruited soldiers and young officers will support our struggle for control."
  TUR_utilize_farming_population:0 "Utilize Farming Population"
