--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8852,3 +8852,16 @@ july_crisis_austrian_claim:0 "§Y[AUH.getFlag][AUH.getName]§! wants reparation 
 july_crisis_serbian_claim:0 "§Y[SER.getFlag][SER.getName]§! oppose this decision"
 july_crisis_alert:0 "July crisis alert"
 july_crisis_alert_tt:0 "§RThe July crisis§! begins, opposing §Y[AUH.getFlag][AUH.getAdjective]§! claims for reparations toward §Y[SER.getFlag][SER.getName]§!."
+
+FIN_recovering_from_civil_war_category: "Recovering From the Civil War"
+FIN_buy_foreign_aircraft: "Purchase Foreign Aircraft"
+FIN_buy_Breguet_XIV: "Purchase Breguet XIVs from [FRA.Getname] "
+FIN_buy_Savoia_s9: "Purchase seaplanes from [ITA.getName]"
+FIN_buy_Savoia_s9_tt: "§Y2§! units of [ITA.GetAdjective] §YSavoia S.9§! is added to the national stockpile"
+FIN_pardon_reds_II: "Pardon §RRed Guard Members§! With Sentences Shorter Than Four Years"
+FIN_pardon_reds_III: "Pardon §RRed Guard Members§! With Sentences Shorter Than Six Years"
+FIN_pardon_the_reds_II_days_tt: "Current days are: [?FIN_pardon_the_reds_III:days|Y0]"
+FIN_pardon_the_reds_II_completed_tt: "Has completed decision;£decision_icon_small §YPardon§! §RRed Guard Members§! §YWith Sentences Shorter Than Four Years§!"
+FIN_german_fertiliser: "First Shipment of German Fertiliser"
+FIN_german_fertiliser_II: "Second Shipment of German Fertiliser"
+FIN_german_fertiliser_III: "Third Shipment of German Fertiliser"
