--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2977,6 +2977,12 @@ we_are_number_one_Naval_treaty_nation:0 "We are the most powerful navy of all ad
  FIN_SVR: "Suomen Valtion Rautatiet"
  FIN_wartsila: "Wärtsilä"
  FIN_rosenlew: "Oy W.Rosenlew Ab"
+ FIN_modify_FIN_famine_ns: "Modify §YFood Shortage§! by "
+ FIN_modify_FIN_prisoner_camps_ns: "Modify §YPrisoner Camps§! by "
+ FIN_modify_FIN_recovering_from_civil_war_ns: "Modify §YRecovering From Civil War§! by "
+ FIN_prisoner_camps: "Prisoner Camps"
+ FIN_recovering_from_civil_war: "Recovering From Civil War"
+ FIN_famine_modifier: "Food Shortage"
 
  FRA_liberal_opposition:0 "Liberal Opposition"
  FRA_liberal_opposition_desc:0 "France is a free country where every political opinion can be expressed. This situation allows the right-wing opposition to maneuver against our interests."
