--- a/localisation/english/ww1_modifiers_l_english.yml
+++ b/localisation/english/ww1_modifiers_l_english.yml
@@ -84,3 +84,9 @@
  personal_friendship:0 "Personal Friendship"
  kiautschou_malus:0 "Japanese occupation in Shandong"
  RUS_russian_civil_war_raging:0 "Russian Civil War"
+ 
+ monthly_population_tt: " $MODIFIER_GLOBAL_MONTHLY_POPULATION$: $RIGHT|+=%1$"
+ supply_consumption_factor_tt: " $MODIFIER_SUPPLY_CONSUMPTION_FACTOR$: $RIGHT|+=%1$"
+ industry_repair_factor_tt: " $MODIFIER_INDUSTRY_REPAIR_FACTOR$: $RIGHT|+=%1$"
+ supply_node_range_tt: " $MODIFIER_SUPPLY_NODE_RANGE$: $RIGHT|+=%1$"
+ 
