--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10409,7 +10409,7 @@ POR_pillar_of_democracy_desc:0 ""
 if_law_passes_tt: "§YIf the law passes:§!"
 FIN_establish_ilmavoimat: "Estabilish Ilmavoimat"
 FIN_purchase_foreign_aircraft: "Purchase Foreign Aircraft"
-FIN_purchase_foreign_aircraft_tt: "§YUnlocks decisions§! to purchase §Yplanes and licenses for planes§! from foreign powers"
+FIN_purchase_foreign_aircraft_tt: "Unlocks decisions to£decision_icon_small §YPurchase Planes and Licenses for Planes From Foreign Powers§!"
 FIN_our_own_designs: "Our Own Designs"
 FIN_valtion_lentokonetehdas: "Ilmailuvoimien Lentokonetehdas"
 FIN_french_aviation_advisors: "French Aviation Advisors"
@@ -10424,7 +10424,44 @@ FIN_pilot_school: "Found a Pilot School"
 FIN_expand_old_russian_airbases: "Repair and Expand Old Russian Airfields"
 FIN_ground_bases: "Prioritise Ground Bases"
 FIN_sea_plane_bases: "Prioritise Seaplane Stations"
+FIN_establish_VATO: "Establish VATO"
+FIN_establish_VATO_desc: "In order to combat the resistance in reconquered territories we have to establish a special agency to care of the territories and establish court-martials in the reconquered territories."
+FIN_establish_VATO_tt: "Unlocks Decisions: £decision_icon_small §YTo Deal With§! §RResistance In Reconquered Territories§!"
+FIN_unlocks_army_reform_tt: "Unlocks £decision_icon_small §YArmy Reform§! Decisions"
+FIN_germanise_army: "Germanise Our Army"
+FIN_germanise_army_desc: "Even though our army defeated the rebels in the independece war, the war showed us that our army isn't most likely trained enough to withstand any possible Russian invasion. In order to make our army capable of that we should invite some Germans to help us organise and train our armed forces."
+FIN_establish_kingdom: "Establish Kingdom"
+FIN_establish_kingdom_desc: "Our people have been led by kings and emperors since 1323 and even our constitution says that our nation should be led by a monarch. But unlike the other Nordics whose monarchs are week and rather figureheads we need a strong king to unite our nation and lead us to brighter future. "
+FIN_slavery_act: "Forced Labour Act"
+FIN_slavery_act_desc: "After our victory we now have many thousands of prisoners in our prison camp whose conditions are rather poor. Meanwhile our nation is also suffering from food shortages. In order to solve both of the problems at the same time we should pass a law allowing us to send our prisoners to work in German mines and in return get fertilisers for our agriculture."
+FIN_slavery_act_tt: "We will provide [GER.GetFlag]§YGermany§! some of our prisoners to work in their mines and in return we will get §Yfew shipments of Fertilisers§! from [GER.GetFlag]§YGermany§! over time."
+FIN_defeat_the_rebels: "Down With the Traitors"
+FIN_defeat_the_rebels_desc: "It seems like some of our brothers and sister have been brainwashed to believe the Bolshevik ideas which has led to them turning against their own beloved homeland. Even though some of our fellow countrymen have turned their backs to our nation doesn't mean that we should do it."
+FIN_pardon_the_reds_tt: "Will unlock further decisions over time to£decision_icon_small §YPardon members of the§! §RRed Guards§!"
+FIN_pardon_the_reds: "Pardon the Ones Who Didn't Fight"
+FIN_pardon_the_reds_desc: "Even though at least according to some not just all the men but the women and the children too in the prison camps deserve their destinies but according to some the ones who didn't participate the rebellion should be pardoned in order to both get our economy back to its feet and improve the horrendous conditions in the camps."
+FIN_recover_from_cw: "Recover From Civil War"
+FIN_recover_from_cw_desc: "Now finally when the fighting has stopped and the last rebels have surrendered we can finally focus on rebuilding and recovering our nation, its people and economy."
+FIN_white_guard_act: "Civil Guard Act"
+FIN_white_guard_act_desc: "After the end of the civil war the White Guards that formed the backbone of our army during the civil war have been marginalized in favor of the regular army which have led to some of their leader demanding us to recognise them as an independent Organisation."
+FIN_torppari_laki: "Act on Redemption of Leased Areas"
+FIN_torppari_laki: "There have been problems with tenant farmer agreements since forever because of the very unclear and confusing content in those agreements. So far there have been two temporary acts to ease the problem in 1909 and in 1915 but to finally end this problem once and for all we should allow the Tenant farmers to redeem the lands they have been using from their overlords."
+FIN_invite_ostsee_division: "Request German Support"
+FIN_invite_ostsee_division_desc: "In order to win the war quicker and with less casualties our political leadership and even some of members of our military leadership have demanded that we should ask help from the Germans. Even though with German assistance we could win the war quicker it can will also obligate us to do at least some favors for the Germans."
+FIN_free_at_last: "Free At Last"
+FIN_free_at_last_desc: "Our people have been opressed for hundreds of years first by Swedes and then by Russians, but now finally the opression is over and our nation and it's people are free."
+FIN_establish_naval_guards: "Estabilish Naval Guards"
+FIN_establish_naval_guards_desc: "Just like on ground we have the white guards we should also have same style Organisation on the sea to take care of the naval defence."
+FIN_restore_order: "Restore Order"
+FIN_restore_order_desc: "Since the revolution in Russia the order in Finland has been almost completely gone and especially the red militias and bandits have been terrorising people both in the cities and in the countryside. Now the time has finally came to put end to this anarchy and terror and restore order in the whole country."
+FIN_disarm_russian_garrisons: "Disarm Foreign Garrisons"
+FIN_disarm_russian_garrisons_desc: "Even though our country has been independent for some time now there are still many foreign garrisons in our territory. We should disarm those garrisons and send the soldiers back to their country and use their weapons to equip our own army."
+FIN_civilwar_conscription: "Temporary Universal Conscription"
+FIN_civilwar_conscription_desc: "In order to get more men into the frontlines we need to declare temporary universal conscription for all men. This can legally be done according to the 1878 conscription act so this shouldn't cause any serious problems between the civilian and military leaderships."
 
+FIN_pardon_the_reds_days_tt: "Current days are: [?FIN_pardon_the_reds:days|Y0]"
+FIN_pardon_the_reds_completed_tt: "Has completed focus §YPardon the Ones Who Didn't Fight§!"
+ 
 # Tooltips
 
 unlocks_national_focus_tt: "§YNational Focus§! becomes §GAvailable§!:"
