better autonomous vilayet show

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1303,6 +1303,8 @@
  SYR_communism_party:0 "Syrian Communist Party"
  SYR_democratic_party:0 "National Bloc"
  SYR_neutrality_party:0 "Hashemites"
+ SYR_young_arab_party:0 "Al-Fatat"
+ SYR_young_arab_party_long:0 "Al-Fatat"
  
  LEB_fascism_party:0 "Kataeb"
  LEB_neutrality_party:0 "Maronite Patriarchy"
