--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2205,6 +2205,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_dismiss_nazim_bey:0 "Dismiss [ROOT.TUR_nazim_bey.GetName]"
  TUR_dismiss_nazim_bey_desc:0 "[ROOT.TUR_nazim_bey.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_nazim_bey_tt:0 "Modify §YCommittee of Union and Progress§! by\n£political_power_texticon  Daily Political Power Gain: §R-0.01%§!\n£war_support_modifiericons_texticon  War Support: §R-5.00%§!\n£experience_loss_texticon  Experienced soldier losses: §R+5.0%§!\n£boost_popularity_texticon  Daily Proto-Fascism Support: §R-0.01§!\n\n"
+ TUR_utilize_ismail_canbolat:0 "Utilize [ROOT.TUR_ismail_canbolat.GetName]"
  TUR_utilize_ismail_canbolat_desc:0 "Though not an official part of the government, [ROOT.TUR_ismail_canbolat.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
  TUR_utilize_ismail_canbolat_tt:0 "Modify §YCommittee of Union and Progress§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+5%§!\n£operatives_root_out_resistance_texticon  Root Out Resistance mission effects: §G+15%§!\n\n"
  TUR_dismiss_ismail_canbolat:0 "Dismiss [ROOT.TUR_ismail_canbolat.GetName]"
