--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4023,9 +4023,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.12.t:0 "Mahmud Şevket Paşa Assasinated"
  ottoman.12.d:0 "Almost six months after the coup, Grand Vizier Şevket Paşa was killed by relatives of the assassinated Nazım Paşa. The assassination of the grand vizier was the last straw in the patience of the nationalists, after which raids began against members of the opposition. Since power is in the hands of the military from the İTF, a temporary symbolic figure will be positioned as the grand vizier untill a new government could be established."
  ottoman.12.a:0 "We must get rid of these liberals before they cause more trouble."
- ottoman.15.t:0 "Said Halim Resigns."
- ottoman.15.d:0 "Due to his constant clashes and disagreements with the Three Pasha Government, Said Halim's premiership has been cut short. He'll be replaced by Mehmed Talat Paşa, who himself is a part of the Three Pasha Government."
- ottoman.15.a:0 "There's no one left to check the mad man."
+ ottoman.15.t:0 "Ahmed Cemâl Takes off to Syria"
+ ottoman.15.d:0 "Ahmed Cemâl Paşa, a member of the infamous triumvirate, has been sent to Syria to assume the command of 4th army group. Though his assingment on surface has been justified as maintaining order in southern provinces while passing centralization reforms, many in the government sees this as an attempt to push Cemâl Paşa away from the power struggle that's going on in the capital. Yet Cemâl's appointment to Syria won't cease his involvement in politics, if not outright challenging [347.GetName]'s influence in Syria."
+ ottoman.15.a:0 "We don't have to concern over Cemâl, for now."
+ ottoman.15.b:0 "At your disposal, Cemâl Paşa!"
  ottoman.16.t:0 "Ottomans Ask for Bailout"
  ottoman.16.d:0 "Our partnership with the Ottomans have been growing steadily. Our recent economic interests in the empire has led to us gaining a huge leverage over the country. With this reason, Ottomans have asked for a bailout on the part of our debt."
  ottoman.16.a:0 "We can grant a bailout for good relations."
