--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1919,3 +1919,7 @@
  PAP_vatican_ADJ:0 "Vatican"
  PAP_vatican_neutrality:0 "Vatican City State"
  PAP_vatican_neutrality_DEF:0 "the Vatican City State"
+
+ TUR_ottoman_syria:0 "Ottoman Syria"
+ TUR_ottoman_syria_DEF:0 "Ottoman Provinces in Syria under the command of Ahmed Cemâl Paşa"
+ TUR_ottoman_syria_ADJ:0 "Ottoman"
