--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -595,6 +595,7 @@
  VICTORY_POINTS_1618:0 "Muskogee"
  VICTORY_POINTS_11785:0 "Harrisburg"
  VICTORY_POINTS_11817:0 "Williamsport"
+ VICTORY_POINTS_11782:0 "Trenton"
 
  PETROGRAD_PROV:0 "Petrograd"
  LENINGRAD_PROV:0 "Leningrad"
